--- a/src/graphing/bak/dagre/fonts/exepixelperfect/style.css
+++ b/src/graphing/bak/dagre/fonts/exepixelperfect/style.css
@@ -4,5 +4,5 @@
     font-family: 'EXEPixelPerfect Medium';
     font-style: normal;
     font-weight: normal;
-    src: local('EXEPixelPerfect Medium'), url('EXEPixelPerfect.woff') format('woff');
+    src: local('EXEPixelPerfect Medium'), url('/kweexamples/src/graphing/bak/dagre/fonts/exepixelperfect/EXEPixelPerfect.woff') format('woff');
     }
