--- a/src/graphing/js/kwe/editor2/index.css
+++ b/src/graphing/js/kwe/editor2/index.css
@@ -4,7 +4,7 @@ html,body{
 	width:100%;
 }
 .ace_focus{
-	background:#444444!important;
+	background:#0f1d20 !important;
 }
 .menu{margin-bottom:8px;}
 .menu select{vertical-align:top;}
